--- a/Python_Basic/Chapter 02-1. 변수의 이해 및 기본 데이터 타입.ipynb
+++ b/Python_Basic/Chapter 02-1. 변수의 이해 및 기본 데이터 타입.ipynb
@@ -406,7 +406,7 @@
    "source": [
     "a = 5\n",
     "b = 4\n",
-    "\n",
+    "&&\n",
     "print(a + b) # 덧셈\n",
     "print(a * b) # 곱셈\n",
     "print(a - b) # 뺄셈\n",
@@ -591,11 +591,94 @@
     }
    ],
    "source": [
+    "# 가능\n",
     "a = 52\n",
     "print(type(a))\n",
     "\n",
+    "# 가능\n",
     "b = str(a)\n",
     "print(type(b)) # 문자열로 형변환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 가능(실수형 → 정수형 변환 O)\n",
+    "c = 3.14\n",
+    "case_c = int(c) \n",
+    "print(case_c)\n",
+    "\n",
+    "# 가능\n",
+    "d = 5\n",
+    "case_d = float(d)\n",
+    "print(case_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 불가능(문자열 실수형 → 정수형 변환 X)\n",
+    "e = '3.14'\n",
+    "case_e = int(e)\n",
+    "print(case_e)\n",
+    "\n",
+    "# 가능\n",
+    "f='5'\n",
+    "case_f = float(f)\n",
+    "print(case_f)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **의미없는 소수점 0 제거하기**\n",
+    " - 소수점을 무조건 지우는게 아님.\n",
+    " - 의미없는 0만, ex) 3.0 → 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3.0\n",
+    "b = \"{:g}\".format(a)\n",
+    "print(a)\n",
+    "print(b)"
    ]
   }
  ],
