--- a/Python_Basic/Chapter 02-2. 문자열 타입의 이해.ipynb
+++ b/Python_Basic/Chapter 02-2. 문자열 타입의 이해.ipynb
@@ -349,6 +349,116 @@
     "a = 'hello world what a nice weather'\n",
     "a.split('w')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **strip**\n",
+    " - 문자열 양옆의 공백제거\n",
+    " - strip(): 문자열 양옆 공백제거\n",
+    " - lstrip(): 문자열 왼쪽의 공백 제거\n",
+    " - rstrip(): 문자열 오른쪽의 공백 제거"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Hello\n",
+      "Hi\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "Hello\n",
+      "Hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "str_a = '''\n",
+    "\n",
+    "Hello\n",
+    "Hi\n",
+    "\n",
+    "'''\n",
+    "print(str_a)\n",
+    "print('====================')\n",
+    "print(str_a.strip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **문자열 구성 파악하기 is00()**\n",
+    " - islower(): 문자열이 소문자로 구성되어 있는지 확인\n",
+    " - isupper(): 문자열이 대문자로 구성되어 있는지 확인\n",
+    " - isdigit(): 문자열이 숫자로 인식될수있는지 확인\n",
+    " - isalnum(): 문자열이 알파벳 또는 숫자로만 구성되어 있는지 확인\n",
+    " - isdecimal(): 문자열이 정수 형태인지 확인"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **find()와 rfind()**\n",
+    " - 문자열 내부에 특정 문자가 어디에 위치하는지 확인(인덱스 번호 알려줌)\n",
+    " - find()는 왼쪽부터, rfind()는 오른쪽부터 찾음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "str = 'hello python'\n",
+    "print(str.find('python'))\n",
+    "print(str.find('l'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **in**\n",
+    " - 특정 문자열 포함하는지 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hi' in 'Hi Cherry')"
+   ]
   }
  ],
  "metadata": {
